--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,6 +6,9 @@ header {
     min-height: 60px;
     color: aliceblue;
     padding: 20px;
+    box-shadow: 0px 3.2px 3px rgba(0, 0, 0, 0.24);
+    position: relative;
+    z-index: 10;
 }
 
 img {
