--- a/src/components/Navegation.css
+++ b/src/components/Navegation.css
@@ -2,6 +2,7 @@
     background-color: rgb(195, 220, 252);
     height: 100vh;
     width: 27vw;
+    box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.103);
 }
 
 .grid {
@@ -15,8 +16,10 @@
     text-align: left; 
     width: 100%; 
     padding: 10px;
+    /* box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.342); */
 }
 
 button:hover {
     background-color: rgb(228, 240, 255);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.342);
 }
