--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 header {
-    background-color: rgb(45, 74, 128);
+    background-color: #263646;
     display: flex;
     justify-content: space-between;
     align-items: center;
