--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -58,6 +58,7 @@
     background-color: #9cb1c5;
     padding: 0px 15px 0px 15px;
     border-radius: 15px;
+    box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.171)
   }
 
   /* Estilo do input de postagem */
