--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -11,8 +11,8 @@
     0 2px 49px 0 rgba(0, 0, 0,0.06) 
 }
 
-*{
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+* {
+  font-family: var(--font-poppins);
 }
 
 .homeFeed {
