--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-decoration: none;
 }
 
 .area-nav-and-profilecontent {
@@ -60,5 +61,18 @@
     padding: 15px;
     margin: 16px;
     border-radius: 12px;
-    box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.349);
+
 }
+
+.postageUser {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .post {
+    background-color: rgb(255, 255, 255);
+    padding: 15px;
+    margin: 16px;
+    border-radius: 12px;
+    box-shadow: 0px 5px 5px -5px rgba(0, 0, 0, 0.349);
+  }
